--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-eslint": "~6.0.4",
     "babel-loader": "~6.0.1",
     "babel-plugin-react-transform": "~2.0.2",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "~6.1.4",
     "babel-preset-react": "~6.1.4",
     "babel-preset-stage-0": "~6.5.0",
@@ -27,15 +28,16 @@
     "eslint-plugin-react": "~6.1.2",
     "express": "~4.13.3",
     "extract-text-webpack-plugin": "~1.0.1",
+    "immutability-helper": "^2.0.0",
     "internal-ip": "~1.2.0",
     "node-sass": "~3.8.0",
     "normalize.css": "~4.2.0",
     "postcss-loader": "~0.10.1",
-    "react": "~15.3.0",
-    "react-addons-css-transition-group": "~15.3.0",
-    "react-addons-update": "~15.3.0",
-    "react-dom": "~15.3.0",
-    "react-toolbox": "~1.1.2",
+    "react": "~15.4.1",
+    "react-addons-css-transition-group": "~15.4.1",
+    "react-addons-update": "~15.4.1",
+    "react-dom": "~15.4.1",
+    "react-toolbox": "~1.3.3",
     "react-transform-catch-errors": "~1.0.0",
     "react-transform-hmr": "~1.0.1",
     "redbox-react": "~1.3.0",
